--- a/1-weather-app/style.css
+++ b/1-weather-app/style.css
@@ -23,7 +23,7 @@ body {
 .search{
   width: 100%;
   display: flex;
-  align: center;
+  /* align: center; */
   justify-content: space-between;
 }
 
@@ -52,4 +52,28 @@ body {
 
 .search button img{
   width: 16px;
+}
+
+.weather-icon{
+  width: 170px;
+  margin-top: 30px;
+}
+
+.weather h1{
+  font-size: 80px;
+  font-weight: 500;
+}
+
+.weather h1{
+  font-size: 45px;
+  font-weight: 400;
+  margin-top: -10px;
+}
+
+.details{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-top: 50px; 
 }
