--- a/1-weather-app/style.css
+++ b/1-weather-app/style.css
@@ -64,7 +64,7 @@ body {
   font-weight: 500;
 }
 
-.weather h1{
+.weather h2{
   font-size: 45px;
   font-weight: 400;
   margin-top: -10px;
@@ -77,3 +77,20 @@ body {
   padding: 0 20px;
   margin-top: 50px; 
 }
+
+.col{
+  display: flex;
+  align-items: center;
+  text-align: left;
+}
+
+.col img{
+  width: 40px;
+  margin-right: 10px;
+}
+
+.humidity, .wind{
+  font-size: 28px;
+  margin-top: -6px;
+}
+
